--- a/game.html
+++ b/game.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <div class="container">
-        <div id="game" class="justify-center flec-co">
+        <div id="game" class="flex-column flex-center">
             <div id="hud">
-                <div class="hud-item">
-                    <p id="progressText" class="hud-prefix">
+                <div class="hud-item" class="flex-column flex-center">
+                    <!-- <p id="progressText" class="hud-prefix">
                         Question
                     </p>
                     <div id="progressBar">
                         <div id="prgresBarFull"></div>
-                    </div>
+                    </div> -->
                 </div>
-                <div class="hud-item">
+                <div class="hud-item" class="flex-column flex-center">
                     <p class="hud-prefix">
                         Score
                     </p>
@@ -28,8 +28,8 @@
                     </h1>
                 </div>
             </div>
-            <div id="question">What is the answer to this question?</div>
-            <div class="choice-container">
+            <h1 id="question">What is the answer to this question?</h1>
+            <div class="choice-container" class="flex-column flex-center">
                 <p class="choice-prefix">A</div>
                 <p class="choice-text"data-number="1">Choice</p>  
             </div>
@@ -41,11 +41,11 @@
                 <p class="choice-prefix">C</div>
                 <p class="choice-text"data-number="3">Choice</p>  
             </div>
-            <div class="choice-container">
+             <div class="choice-container">
                 <p class="choice-prefix">D</div>
                 <p class="choice-text"data-number="4">Choice</p>  
-            </div>
-            <div class="choice-container">
+            </div> 
+            <!-- <div class="choice-container">
                 <p class="choice-prefix">E</div>
                 <p class="choice-text"data-number="5">Choice</p>  
             </div>
@@ -68,7 +68,7 @@
             <div class="choice-container">
                 <p class="choice-prefix">J</div>
                 <p class="choice-text"data-number="10">Choice</p>  
-            </div>
+            </div> -->
         </div>
     </div>
     <script src="game.js"></script>
