--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
                 <p class="choice-prefix">D</div>
                 <p class="choice-text"data-number="4">Choice</p>  
             </div> 
-            <!-- <div class="choice-container">
+             <div class="choice-container">
                 <p class="choice-prefix">E</div>
                 <p class="choice-text"data-number="5">Choice</p>  
             </div>
@@ -68,7 +68,7 @@
             <div class="choice-container">
                 <p class="choice-prefix">J</div>
                 <p class="choice-text"data-number="10">Choice</p>  
-            </div> -->
+            </div> 
         </div>
     </div>
     <script src="game.js"></script>
