removed flex-column flex-center from game.html. It was why page wanst looking uniform.

--- a/game.html
+++ b/game.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="container">
-        <div id="game" class="flex-column flex-center">
+        <div id="game" class="justify-center flex column">
             <div id="hud">
-                <div class="hud-item" class="flex-column flex-center">
-                    <!-- <p id="progressText" class="hud-prefix">
+                <div class="hud-item">
+                     <p id="progressText" class="hud-prefix">
                         Question
                     </p>
                     <div id="progressBar">
                         <div id="prgresBarFull"></div>
-                    </div> -->
+                    </div> 
                 </div>
                 <div class="hud-item" class="flex-column flex-center">
                     <p class="hud-prefix">
