--- a/game.html
+++ b/game.html
@@ -12,14 +12,14 @@
         <div id="game" class="justify-center flex column">
             <div id="hud">
                 <div class="hud-item">
-                     <p id="progressText" class="hud-prefix">
+                    <p id="progressText" class="hud-prefix">
                         Question
                     </p>
                     <div id="progressBar">
-                        <div id="prgresBarFull"></div>
+                      <div id="progressBarFull"></div>
                     </div> 
                 </div>
-                <div class="hud-item" class="flex-column flex-center">
+                <div class="hud-item">
                     <p class="hud-prefix">
                         Score
                     </p>
@@ -28,47 +28,23 @@
                     </h1>
                 </div>
             </div>
-            <h1 id="question">What is the answer to this question?</h1>
-            <div class="choice-container" class="flex-column flex-center">
-                <p class="choice-prefix">A</div>
-                <p class="choice-text"data-number="1">Choice</p>  
+            <div id="question">What is the answer to this question?</div>
+            <div class="choice-container">
+                <p class="choice-prefix">A</p>
+                <p class="choice-text"data-number="1">Choice 1</p>  
             </div>
             <div class="choice-container">
-                <p class="choice-prefix">B</div>
-                <p class="choice-text"data-number="2">Choice</p>  
+                <p class="choice-prefix">B</p>
+                <p class="choice-text"data-number="2">Choice 2</p>  
             </div>
             <div class="choice-container">
-                <p class="choice-prefix">C</div>
-                <p class="choice-text"data-number="3">Choice</p>  
-            </div>
-             <div class="choice-container">
-                <p class="choice-prefix">D</div>
-                <p class="choice-text"data-number="4">Choice</p>  
-            </div> 
-             <div class="choice-container">
-                <p class="choice-prefix">E</div>
-                <p class="choice-text"data-number="5">Choice</p>  
+                <p class="choice-prefix">C</p>
+                <p class="choice-text"data-number="3">Choice 3</p>  
             </div>
             <div class="choice-container">
-                <p class="choice-prefix">F</div>
-                <p class="choice-text"data-number="6">Choice</p>  
+                <p class="choice-prefix">D</p>
+                <p class="choice-text"data-number="4">Choice 4</p>  
             </div>
-            <div class="choice-container">
-                <p class="choice-prefix">G</div>
-                <p class="choice-text"data-number="7">Choice</p>  
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">H</div>
-                <p class="choice-text"data-number="8">Choice</p>  
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">I</div>
-                <p class="choice-text"data-number="9">Choice</p>  
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">J</div>
-                <p class="choice-text"data-number="10">Choice</p>  
-            </div> 
         </div>
     </div>
     <script src="game.js"></script>
