--- a/end.html
+++ b/end.html
@@ -19,5 +19,6 @@
             <a href="/game.html" class='btn'>Play Again</a>
         </div>
     </div>
+    <script src="end.js"></script>
 </body>
 </html>
