--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are you Ready?</h1>
-            <a href="/game.html" class="btn">play</a>
+            <a href="game.html" class="btn">play</a>
             <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
 
     </div>
-
+    <script src="game.js"></script>
 </body>
 </html>
