restructure of file structure. Additional changes to make program work.

--- a/end.html
+++ b/end.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Congrats!! Save your name!</title>
+    <link rel="stylesheet" href="assests/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -14,11 +14,11 @@
                 <h2 id="end-text">Enter your name below to save your score!</h2>
                 <input type="text" name="name" id="username" placeholder="Enter your name">
                 <button class="btn" id="saveScoreBtn" type="submit" 
-                onClick="saveHighScore(event)" disabled>save</button>
+                onclick="saveHighScore(event)" disabled>save</button>
             </form>
-            <a href="/game.html" class='btn'>Play Again</a>
+            <a href="./game.html" class='btn'>Play Again</a>
         </div>
     </div>
-    <script src="end.js"></script>
+    <script src="assests/js/end.js"></script>
 </body>
 </html>
