--- a/highscores.html
+++ b/highscores.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Scores</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="highscores.css">
+    <link rel="stylesheet" href="assests/css/style.css">
+    <link rel="stylesheet" href="assests/css/highscores.css">
 
 </head>
 <body>
@@ -14,10 +14,10 @@
     <div id="highScores" class="flex-center flex-column">
         <h1 id="finalScore">Leaderboard</h1>
         <ul id="highScoresList"></ul>
-        <a href="/" class="btn">Go Home</a>
+        <a href="./index.html" class="btn">Go Home</a>
     </div>
 </div>
-<script src="highscores.js"></script>
+<script src="assests/js/highscores.js"></script>
     
 </body>
 
