--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assests/css/style.css">
     
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are you Ready?</h1>
-            <a href="game.html" class="btn">play</a>
-            <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
+            <a href="./game.html" class="btn">play</a>
+            <a href="./highscores.html" class="btn">High Scores</a>
         </div>
 
     </div>
-    <script src="game.js"></script>
+
 </body>
 </html>
