--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
                     <p class="hud-prefix">
                         Score
                     </p>
-                    <h1 class="hud-main-text" id="Score">
+                    <h1 class="hud-main-text" id="score">
                         0
                     </h1>
                 </div>
