--- a/end.html
+++ b/end.html
@@ -16,7 +16,7 @@
                 <button class="btn" id="saveScoreBtn" type="submit" 
                 onclick="saveHighScore(event)" disabled>save</button>
             </form>
-            <a href="./game.html" class='btn'>Play Again</a>
+            <a href="./game.html" class="btn">Play Again</a>
         </div>
     </div>
     <script src="assests/js/end.js"></script>
