--- a/highscores.html
+++ b/highscores.html
@@ -6,6 +6,7 @@
     <title>High Scores</title>
     <link rel="stylesheet" href="assests/css/style.css">
     <link rel="stylesheet" href="assests/css/highscores.css">
+    <link rel="stylesheet" href="assests/css/highscores.css">
 
 </head>
 <body>
